# claw-face

./: CLAUDE.md  README.md  claw-face.desktop  claw_face.py  launch.sh  pyproject.toml  temp.html
.github/workflows/: ci.yml
docs/: gnome-wayland-idle-screensaver.md
extras/systemd/: claw-face-idle.service  claw-face-kiosk.service
hooks/claw-face-auto/: HOOK.md  handler.ts
plugins/claw-face-presence/: index.ts  openclaw.plugin.json  package.json
plugins/claw-face-presence/src/: presence.ts
skills/openclaw-claw-face/: SKILL.md
skills/openclaw-claw-face/scripts/: claw_face_cmd.py
src/claw_face/: __init__.py  components.py  config.py  expressions.py  face.py  face_tracker.py  idle.py  main.py  server.py
src/claw_face/web/: index.html
systemd/: claw-face-evening.service  claw-face-evening.timer  claw-face-idle.service  claw-face-kiosk.service  claw-face-morning.service  claw-face-morning.timer  claw-face-sleepy.service  claw-face-sleepy.timer  claw-face-tracker.service
tests/: test_config.py  test_expressions.py  test_server.py
