[project]
name = "claw-face"
version = "0.2.0"
description = "Animated face display for James Claw"
authors = [
    {name = "James Claw", email = "jamesclaw007@outlook.com"},
    {name = "John Pals", email = "john@digitalbrain.nl"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["animation", "face", "display", "web"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "pywebview>=5.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
]

[project.scripts]
claw-face = "claw_face.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claw_face = ["web/*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
